# mybroker

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.flyhigh/: bootstrap-report.md
.flyhigh/dashboard/: state.json
.flyhigh/memory/: commands.md  decisions.md  failed-attempts.md  hazards.md  project-facts.md  skill-notes.md
config/: topics.json
docs/: architecture.md  free-public-evidence-sources.md  product-brief.md  risk-and-compliance.md  surfaces.md
examples/: prices.csv
examples/prices-multi/: abc.csv  xyz.csv
examples/profiles/: beginner-conservative.json
examples/public-evidence/: gdelt-ai-news.json  sec-aapl-submissions.json  stooq-spy.csv
examples/seeds/: consumer-risk.md  market-brief.md
reports/: dashboard.html  report-rollup.json
reports/daily/: research-plan.json
reports/evidence/: daily-evidence-catalog.json  public-evidence-catalog.json
reports/memory/: topic-memory.json
reports/product/: market-brief.html
reports/runs/: local-momentum-research.json  multi-file-research.json
reports/scenarios/: beginner-market-sim.json  beginner-profile-sim.json  daily-research-sim.json  daily-research-verdict.json  profile-verdict.json  public-evidence-sim.json  public-evidence-verdict.json  verdict.json
src/mybroker/: __init__.py  __main__.py  cli.py  dashboard.py  data.py  models.py  policy.py  product_brief.py  runner.py  (+7 more)
tests/: test_dashboard.py  test_data_adapters.py  test_policy.py  test_product_brief.py  test_profile.py  test_public_evidence.py  test_registry.py  test_reports.py  test_scenario.py  test_signals.py  test_topics.py
(+1 files in other folders)
