[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "mybroker"
version = "0.1.0"
description = "Flyhigh-enabled personal research and signal generation project."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
mybroker = "mybroker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
